@@ -13,6 +13,8 @@ Version 0.5
 
 Not yet released.
 
+- Added :file:`examples/separate_endpoints.py`, showing how to create separate
+  API endpoints for a single model.
 - Added `include_columns` keyword argument to
   :meth:`~flask_restless.APIManager.create_api` method to allow users to
   specify which columns of the model are exposed in the API.
